<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.8">
  <DUT Name="outWord" Id="{dd64833a-d067-4f64-9804-7a1a37fc9f51}">
    <Declaration><![CDATA[TYPE outWord :
STRUCT
	Lower : USINT; //Lower Bytes
	Upper : USINT; //Upper Bytes
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>