<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.11">
  <POU Name="P11_E3508" Id="{a7e3d6a1-82f0-4607-8ac9-093cb5f931f5}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P11_E3508
VAR_INPUT
	wControlValue			: WORD;
	bHeaterOn				: BOOL := FALSE; //to PSTEK
	bHeaterReset			: BOOL; //to PSTEK
END_VAR

VAR_OUTPUT
	bAlarmState_E3508 		: BOOL; //Alarm or Sensor Break Signal
	bManAuto_E3508 			: BOOL; // 0:Manual, 1:Auto
	
	isHeaterReady			: BOOL; //Close : Ready
	isHeaterRun				: BOOL; //Close : Running, Open : Stop
	isHeaterFault			: BOOL; //Close : Falut, Open : Normal
	//isInductionHeaterErr	: BOOL; //Power Supply
	bInductionHeaterCB		: BOOL;
END_VAR

VAR
	//Input from E3508 Controller
	aInputPVBytes AT %I* 		: ARRAY[1..2]OF USINT; //Input Process Values
	aInputSVBytes AT %I* 		: ARRAY[1..2]OF USINT; //Input Set Values
	aInputTVBytes AT %I* 		: ARRAY[1..2]OF USINT; //Input Target Valuse
	aInputCVBytes AT %I* 		: ARRAY[1..2]OF USINT; //Induction Heter Controlled Values
	aInputProportional AT %I* 	: ARRAY[1..2]OF USINT; //PID - Proportional Band
	aInputIntegral AT %I* 		: ARRAY[1..2]OF USINT; //PID - Integral Time
	aInputDerivative AT %I* 	: ARRAY[1..2]OF USINT; //PID - Derivative Time 
	nInputAlarmBytes AT %I* 	: USINT; // Alarm State
	nInputManAutoBytes AT %I* 	: USINT; // ManAuto State
	
	wE3508_PV				: WORD;
	wE3508_SV				: WORD;
	wE3508_PowerRate		: WORD; //To Induction Heater Control Values
	wE3508_P				: WORD; //PID Parameter P
	wE3508_I				: WORD; //PID Parameter I
	wE3508_D				: WORD; //PID Parameter D
	//Output to E3508 Controller
	wOutputSVBytes 				: outWord;
	wOutputPowerSVBytes 		: outWord;
	aOutputSVBytes AT %Q* 		: ARRAY[1..2]OF USINT; //Temperature Set Value
	nOutputManAutoBytes AT %Q* 	: USINT; //ManAuto Change
	aOutputPowerBytes AT %Q* 	: ARRAY[1..2]OF USINT; //Output Power in Manual State
	//nOutputAlarmClear AT %Q* : USINT; //Alarm Clear Set

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Induction Heater & Temperature Controller & Thermo Couple(R-Type)
//Maker: PSTEK, Eurotherm
//Model: 3508
//Temperature Range: 0 ~ 12000℃

(* Read from Power Distribution Pannel *)
bInductionHeaterCB		:= GVL_IO.aDigitalInputIO[4].7;

(* Read from E3508 Device Value *)
wE3508_PV				:= USINT_TO_WORD_Bit(aInputPVBytes[1], aInputPVBytes[2]);
wE3508_SV				:= USINT_TO_WORD_Bit(aInputSVBytes[1], aInputSVBytes[2]);
wE3508_PowerRate		:= USINT_TO_WORD_Bit(aInputCVBytes[1], aInputCVBytes[2]); //divided to 10
wE3508_P 				:= USINT_TO_WORD_Bit(aInputProportional[1], aInputProportional[2]);
wE3508_I 				:= USINT_TO_WORD_Bit(aInputIntegral[1], aInputIntegral[2]);
wE3508_D 				:= USINT_TO_WORD_Bit(aInputDerivative[1], aInputDerivative[2]);

bAlarmState_E3508 		:= nInputAlarmBytes.7;
bManAuto_E3508 			:= nInputManAutoBytes.7;

GVL_IO.aMonitoring_PV[10] := WORD_TO_REAL(wE3508_PowerRate)*0.1; //divided to 10

(* Read from Induction Heater Value *)
isHeaterReady 			:= GVL_IO.aDigitalInputIO[2].2;
isHeaterRun		 		:= GVL_IO.aDigitalInputIO[2].3;
isHeaterFault 			:= GVL_IO.aDigitalInputIO[2].4;

(* Write to E3508 Device Value *)
nOutputManAutoBytes.0 	:= GVL_IO.aOutputCmd[1].11; // 0:Auto, 1:Manual Operation

IF nOutputManAutoBytes.0 THEN
	wOutputSVBytes 			:= WORD_TO_USINT_Bit(wControlValue); //Temperature SetValue
	aOutputSVBytes[1] 		:= wOutputSVBytes.Lower;
	aOutputSVBytes[2] 		:= wOutputSVBytes.Upper;
ELSE
	wOutputPowerSVBytes 	:= WORD_TO_USINT_Bit(wControlValue*10); //multiple to 10, PowerRate SetValue
	aOutputPowerBytes[1] 	:= wOutputPowerSVBytes.Lower;
	aOutputPowerBytes[2] 	:= wOutputPowerSVBytes.Upper;
END_IF


(* Write to Induction Heater Value *)
GVL_IO.aDigitalOutputIO[2].0 := bHeaterOn;
GVL_IO.aDigitalOutputIO[2].1 := bHeaterReset;]]></ST>
    </Implementation>
    <LineIds Name="P11_E3508">
      <LineId Id="302" Count="2" />
      <LineId Id="300" Count="1" />
      <LineId Id="298" Count="1" />
      <LineId Id="297" Count="0" />
      <LineId Id="279" Count="8" />
      <LineId Id="278" Count="0" />
      <LineId Id="531" Count="0" />
      <LineId Id="293" Count="0" />
      <LineId Id="532" Count="0" />
      <LineId Id="294" Count="0" />
      <LineId Id="296" Count="0" />
      <LineId Id="309" Count="1" />
      <LineId Id="254" Count="0" />
      <LineId Id="269" Count="0" />
      <LineId Id="535" Count="0" />
      <LineId Id="547" Count="0" />
      <LineId Id="536" Count="0" />
      <LineId Id="540" Count="1" />
      <LineId Id="539" Count="0" />
      <LineId Id="542" Count="0" />
      <LineId Id="545" Count="1" />
      <LineId Id="544" Count="0" />
      <LineId Id="538" Count="0" />
      <LineId Id="257" Count="0" />
      <LineId Id="290" Count="0" />
      <LineId Id="289" Count="0" />
      <LineId Id="292" Count="0" />
      <LineId Id="382" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>